--- a/dev/pug/pages/index.pug
+++ b/dev/pug/pages/index.pug
@@ -1,6 +1,10 @@
 extends ../layout/main
 
 block variables
-	- var title = 'Главная страница'
+	- var title = 'Каталог'
 
 block content
+	.index-page
+		.container
+			h1 Страница находится в разработке
+			a(href="catalog.html") Каталог
