--- a/dev/static/stylus/base/vars.styl
+++ b/dev/static/stylus/base/vars.styl
@@ -1,7 +1,15 @@
 // ЦВЕТА
-
+gray-1 = #333
+gray-2 = #4F4F4F
+gray-3 = #828282
+gray-4 = #BDBDBD
+gray-5 = #E0E0E0
+gray-6 = #F2F2F2
+color-red = #EB5757
 
 // РАЗМЕРЫ
 
+breakpoint-lg = 1024px
+breakpoint-md = 768px
 
 // ШРИФТЫ
