--- a/dev/static/stylus/common/common.styl
+++ b/dev/static/stylus/common/common.styl
@@ -4,6 +4,10 @@
 @import "buttons.styl"
 /* Конец блока buttons */
 
-/* Cтили блока nav */
-@import "nav.styl"
-/* Конец блока nav */
+/* Cтили блока menu */
+@import "menu.styl"
+/* Конец блока menu */
+
+@import 'select-field.styl'
+@import 'range-field.styl'
+@import 'multiselect-field.styl'
