--- a/dev/static/stylus/main.styl
+++ b/dev/static/stylus/main.styl
@@ -9,6 +9,9 @@
 @import 'base/general.styl'
 
 
+// Компоненты
+@import "common/common.styl"
+
 // Секции
 
 /* Стили секции header */
@@ -19,6 +22,10 @@
 @import 'section/footer.styl'
 /* Стили секции footer */
 
+/* Стили страницы catalog */
+@import 'section/catalog/index.styl'
+/* Стили страницы catalog */
 
-// Компоненты
-@import "common/common.styl"
+/* Стили modal card */
+@import 'section/card/index.styl'
+/* Стили modal card */
