--- a/dev/static/stylus/base/settings.styl
+++ b/dev/static/stylus/base/settings.styl
@@ -13,9 +13,9 @@
 html,body
 	width 100%
 	height 100%
-	// font-family $mainFont
-	font-size: 14px
-	line-height: 1
+	font-family 'Roboto', Arial, sans-serif
+	font-size 16px
+	line-height 1
 	@media (max-width: 960px) 
 		font-size: 12px;
 
