--- a/dev/static/stylus/common/menu.styl
+++ b/dev/static/stylus/common/menu.styl
@@ -13,13 +13,11 @@
   &:hover,
   &.active
     text-decoration underline
-  &.logo
-    margin 0 auto
-    svg
-      max-width 120px
-      fill gray-1
+  &:nth-child(3)
+    margin-right auto
   @media(max-width breakpoint-lg)
-    padding 15px
+    padding 10px
+    font-size 12px
   @media(max-width breakpoint-md)
     display flex
     align-items center
