--- a/dev/static/stylus/section/header.styl
+++ b/dev/static/stylus/section/header.styl
@@ -81,6 +81,8 @@
     fill gray-1
     width 170px
     height 43px
+    path.arrow
+      fill white
   @media(max-width breakpoint-lg)
     top 32px
   @media (max-width breakpoint-md)
@@ -92,6 +94,8 @@
       fill gray-6
       width 86px
       height 22px
+      path.arrow
+        fill gray-1
 
 .header__menu
   @media (max-width breakpoint-md)
