--- a/dev/static/stylus/main.styl
+++ b/dev/static/stylus/main.styl
@@ -26,6 +26,10 @@
 @import 'section/catalog/index.styl'
 /* Стили страницы catalog */
 
+/* Стили страницы error */
+@import 'section/error.styl'
+/* Стили страницы error */
+
 /* Стили modal card */
 @import 'section/card/index.styl'
 /* Стили modal card */
