--- a/dev/pug/pages/become.pug
+++ b/dev/pug/pages/become.pug
@@ -1,10 +1,10 @@
 extends ../layout/main
 
 block variables
-	- var title = 'Каталог'
+	- var title = 'Стать моделью'
 
 block content
-	.index-page
+	.become-page
 		.container
 			h1(style="margin-bottom: 1em;") Страница находится в разработке
 			a(href="catalog.html") Каталог
