margin in header and blocks

--- a/dev/pug/modules/menu.pug
+++ b/dev/pug/modules/menu.pug
@@ -1,7 +1,13 @@
 nav.menu
+  //- scroll in index to section
   a.menu__link(href="#") О студии
+  //- scroll in index to section
   a.menu__link(href="#") Услуги
-  a.menu__link.active(href="#") Модели
-  a.menu__link(href="#") Стать моделью
-  a.menu__link(href="#") Оплата
+  //- link
+  a.menu__link.active(href="catalog.html") Модели
+  //- link
+  a.menu__link(href="become.html") Стать моделью
+  //- link
+  a.menu__link(href="payment.html") Оплата
+  //- open popup
   a.menu__link(href="#") Контакты
