--- a/dev/pug/section/header.pug
+++ b/dev/pug/section/header.pug
@@ -3,7 +3,7 @@ header.header
     .header__wrap
       button.header__burger(type="button" aria-label="Открыть меню")
         span
-      .header__logo
+      a.header__logo(href="/")
         svg(width="170" height="45" viewbox="0 0 170 45" fill="none" xmlns="http://www.w3.org/2000/svg")
           path(d="M21.8186 44.0422C33.716 44.0422 43.3608 34.3974 43.3608 22.5C43.3608 10.6025 33.716 0.957764 21.8186 0.957764C9.92114 0.957764 0.276367 10.6025 0.276367 22.5C0.276367 34.3974 9.92114 44.0422 21.8186 44.0422Z")
           path.arrow(fill-rule="evenodd" clip-rule="evenodd" d="M15.085 14.031H18.7902V31.0309H15.085V14.031ZM26.9824 14.031H31.6663L26.0714 20.6537H43.3052C43.3052 20.9614 43.319 21.2692 43.3329 21.5769C43.3467 21.8847 43.3606 22.1924 43.3606 22.5002V22.5002C43.3606 23.1157 43.3606 23.7312 43.3052 24.3467H26.5331L31.7463 31.0247H27.0932L20.1381 22.217L26.9824 14.031Z")
