--- a/dev/pug/pages/404.pug
+++ b/dev/pug/pages/404.pug
@@ -6,4 +6,4 @@ block variables
 block content
   .error-page
     h1 Страница не найдена
-    a.btn(href="index.html") Главная
+    a.btn(href="/") Главная
