--- a/dev/pug/section/footer.pug
+++ b/dev/pug/section/footer.pug
@@ -8,6 +8,6 @@ footer.footer
             +icon('instagram')
           a(href="#")
             +icon('telegram')
-        p.footer__text Республика Татарстан, г. Иннополис, ул. Спортивная, д. 104
-      p.footer__telegram по всем вопросам telegram: 
+        p.footer__text г. Иннополис, ул. Спортивная, д. 104
+      p.footer__telegram По всем вопросам telegram: 
         a(href="#") @KE_studio
