--- a/dev/static/stylus/section/footer.styl
+++ b/dev/static/stylus/section/footer.styl
@@ -1,7 +1,6 @@
 .footer
   background-color gray-1
-  padding-top 40px
-  padding-bottom 45px
+  padding 40px 0 60px
   @media (max-width breakpoint-md)
     padding 15px 0
 
@@ -11,7 +10,7 @@
   justify-content space-between
 
 .footer__contact
-  max-width 320px
+  max-width 340px
   @media (max-width breakpoint-md)
     width 100%
     max-width 100%
@@ -52,7 +51,7 @@
 
 .footer__text,
 .footer__telegram
-  font-size 16px
+  font-size 18px
   line-height 125%
   letter-spacing 0.8px
   color gray-6
@@ -62,7 +61,9 @@
 .footer__telegram
   a
     color inherit
+    border-bottom 1px solid gray-6
+    padding-bottom 5px
     &:hover
-      text-decoration underline
+      border-color transparent
   @media (max-width breakpoint-md)
     display none
