--- a/dev/static/stylus/common/select-field.styl
+++ b/dev/static/stylus/common/select-field.styl
@@ -67,7 +67,7 @@
     font-size 14px
     padding 0
     &:after
-      display none
+      display none !important
 
 .select-field__list
   position absolute
