--- a/dev/pug/section/card/info.pug
+++ b/dev/pug/section/card/info.pug
@@ -6,7 +6,8 @@
   .card-info__wrap
     .card-info__header
       .card-info__price
-        span.card-info__price-num 1000 ₽
+        span.card-info__price-num 1000
+          i.rouble-icon
         span.card-info__legend стоимость одного часа съемок
       .card-info__expirience
         span.card-info__legend Опыт 
