--- a/dev/static/stylus/base/general.styl
+++ b/dev/static/stylus/base/general.styl
@@ -10,6 +10,14 @@
 .overflow-hidden
 	overflow hidden
 
+.rouble-icon
+	font-family font-rouble
+	overflow hidden
+	position relative
+	font-style normal
+	&:before
+		content "i"
+
 // футер к низу
 
 .wrapper
