--- a/dev/static/stylus/base/vars.styl
+++ b/dev/static/stylus/base/vars.styl
@@ -14,3 +14,6 @@ breakpoint-lg = 1024px
 breakpoint-md = 768px
 
 // ШРИФТЫ
+
+font-roboto = 'Roboto', Arial, sans-serif
+font-rouble = 'rouble', sans-serif
