--- a/dev/pug/section/catalog/block.pug
+++ b/dev/pug/section/catalog/block.pug
@@ -5,5 +5,6 @@
     span.catalog-list-block__name Андрей
     span.catalog-list-block__expirience опыт 3 года
   .catalog-list-block__row
-    span.catalog-list-block__price 1 999 ₽
+    span.catalog-list-block__price 1 999
+      i.rouble-icon
     span.catalog-list-block__age 25 лет
