--- a/dev/static/stylus/base/fonts.styl
+++ b/dev/static/stylus/base/fonts.styl
@@ -1,17 +1,30 @@
 @font-face
   font-family 'Roboto'
-  src url('app/fonts/Roboto-Regular.eot')
-  src url('app/fonts/Roboto-Regular.eot?#iefix') format('embedded-opentype')
-      url('app/fonts/Roboto-Regular.woff') format('woff')
-      url('app/fonts/Roboto-Regular.ttf') format('truetype')
+  src url('../fonts/Roboto-Regular.eot')
+  src url('../fonts/Roboto-Regular.eot?#iefix') format('embedded-opentype')
+      url('../fonts/Roboto-Regular.woff') format('woff')
+      url('../fonts/Roboto-Regular.ttf') format('truetype')
   font-weight normal
   font-style normal
+  font-display swap
 
 @font-face
   font-family 'Roboto'
-  src url('app/fonts/Roboto-Medium.eot')
-  src url('app/fonts/Roboto-Medium.eot?#iefix') format('embedded-opentype')
-      url('app/fonts/Roboto-Medium.woff') format('woff')
-      url('app/fonts/Roboto-Medium.ttf') format('truetype')
+  src url('../fonts/Roboto-Medium.eot')
+  src url('../fonts/Roboto-Medium.eot?#iefix') format('embedded-opentype')
+      url('../fonts/Roboto-Medium.woff') format('woff')
+      url('../fonts/Roboto-Medium.ttf') format('truetype')
   font-weight 500
   font-style normal
+  font-display swap
+
+@font-face
+  font-family "rouble"
+  src url("../fonts/rouble/rouble.eot");
+  src url("../fonts/rouble/rouble.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/rouble/rouble.woff") format("woff"),
+    url("../fonts/rouble/rouble.ttf") format("truetype"),
+    url("../fonts/rouble/rouble.svg#als_rublregular") format("svg")
+  font-weight normal
+  font-style normal
+  font-display swap
