--- a/dev/static/stylus/section/header.styl
+++ b/dev/static/stylus/section/header.styl
@@ -69,6 +69,9 @@
     margin-bottom translate
   &::after
     margin-top translate
+  &.hidden
+    opacity 0
+    visibility hidden
   @media (max-width breakpoint-md)
     display flex
 
