--- a/dev/pug/section/catalog/list.pug
+++ b/dev/pug/section/catalog/list.pug
@@ -1,4 +1,4 @@
-section.catalog-list(data-remodal-target="name_slug")
+section.catalog-list
   .container
     span.catalog-list__all 550 моделей по вашему запросу
     .catalog-list__blocks
