--- a/dev/static/stylus/section/card/info.styl
+++ b/dev/static/stylus/section/card/info.styl
@@ -30,7 +30,7 @@
 .card-info__id
   color gray-4
   display block
-  margin-bottom 55px
+  margin-bottom 50px
 
 .card-info__name
   font-weight bold
@@ -49,7 +49,7 @@
   display flex
   align-items flex-end
   justify-content space-between
-  margin-bottom 80px
+  margin-bottom 50px
 
 .card-info__price
   margin-right 10px
@@ -141,17 +141,15 @@
   letter-spacing 1px
   color gray-1
 
-.card-info__btn
-  max-width 310px
-  padding 20px 30px
-  margin-bottom 40px
-
-.card-info__next
-  margin-left auto
-
 .card-info__actions
   display flex
-  justify-content flex-end
+  justify-content space-between
+  align-items flex-end
+
+.card-info__btn
+  width 100%
+  max-width 310px
+  padding 20px
 
 .card-info__next
   cursor pointer
