--- a/dev/static/stylus/section/card/views.styl
+++ b/dev/static/stylus/section/card/views.styl
@@ -11,11 +11,11 @@
   margin-right 30px
 
 .card-views__thumbs-slider
-  height 521px
+  height 492px
 
 .card-views__thumbs-slide
   &+&
-    margin-top 27px
+    margin-top 20px
 
 .card-views__thumbs-video
   position relative
@@ -30,7 +30,7 @@
   border-radius 8px
   overflow hidden
   cursor pointer
-  margin-top 27px
+  margin-top 20px
   &:after
     content ''
     display block
@@ -74,3 +74,20 @@
   max-width 510px
   border-radius 10px
   overflow hidden
+  .slick-dots
+    display flex
+    justify-content center
+    position absolute
+    bottom 30px
+    left 0
+    right 0
+    li
+      width 6px
+      height 6px
+      border-radius 50%
+      background-color #fff
+      cursor pointer
+      &.slick-active
+        background-color gray-2
+    li + li
+      margin-left 14px
