--- a/dev/pug/modules/range-field.pug
+++ b/dev/pug/modules/range-field.pug
@@ -5,9 +5,9 @@
       .range-field__info-block
         span.range-field__name Выбранный возрастной диапазон
         p.range-field__select
-          span.range-field__select-start
+          span.range-field__select-start 18
           | -
-          span.range-field__select-end
+          span.range-field__select-end 23
       button.range-field__reset(type="button") сброс
     .range-field__slider
       .range-field__slider-info
