fixed range button reset

--- a/dev/pug/modules/range-field.pug
+++ b/dev/pug/modules/range-field.pug
@@ -1,4 +1,5 @@
 .select-field(data-range="true" data-placeholder="Возраст")
+  button.range-field__reset.mobile(type="button") сброс
   span.select-field__active Возраст
   .range-field.select-field__list
     .range-field__info
