--- a/dev/static/stylus/common/range-field.styl
+++ b/dev/static/stylus/common/range-field.styl
@@ -12,6 +12,8 @@
     padding-top 20px
     padding-right 30px
     padding-bottom 20px
+    .range-field__reset
+      display none
 
 .range-field__info
   display flex
