--- a/dev/static/stylus/common/buttons.styl
+++ b/dev/static/stylus/common/buttons.styl
@@ -1,6 +1,6 @@
 .btn
   cursor pointer
-  display flex
+  display inline-flex
   justify-content center
   align-items center
   font-size 16px
@@ -18,5 +18,6 @@
     border-color gray-3
   @media (max-width breakpoint-md)
     font-size 14px
+    line-height 14px
     padding 19px 0
     width 100%
