--- a/dev/pug/section/card/views.pug
+++ b/dev/pug/section/card/views.pug
@@ -13,6 +13,7 @@
         img(src="app/img/content/card-thumb.jpg" alt="Предпросмотр ИМЯ 5")
     button.card-views__thumbs-video(type="button" aria-label="Включить видео ИМЯ")
       +icon('play')
+      span Видео
   .card-views__display
     button.card-views__display-arrow.prev(type="button" aria-label="Предыдущее фото")
       +icon('arrow-left')
