--- a/dev/static/stylus/section/card/views.styl
+++ b/dev/static/stylus/section/card/views.styl
@@ -1,50 +1,49 @@
 .card-views
   width 100%
-  max-width 650px
+  max-width 500px
   flex auto
   display flex
   align-self flex-start
   flex none
 
 .card-views__thumbs
-  width 110px
-  margin-right 30px
+  width 60px
+  margin-right 50px
 
 .card-views__thumbs-slider
-  height 492px
+  height 380px
 
 .card-views__thumbs-slide
+  cursor pointer
   &+&
     margin-top 20px
 
 .card-views__thumbs-video
   position relative
-  background url('../img/content/card-video-poster.jpg') center no-repeat
   background-size cover
   z-index 0
   display flex
+  flex-direction column
   align-items center
   justify-content center
-  width 110px
-  height 108px
-  border-radius 8px
+  width 60px
+  height 80px
   overflow hidden
   cursor pointer
   margin-top 20px
-  &:after
-    content ''
-    display block
-    position absolute
-    z-index -1
-    top 0
-    left 0
-    right 0
-    bottom 0
-    background-image linear-gradient(0deg, rgba(45, 45, 45, 0.54), rgba(45, 45, 45, 0.54))
   svg
-    width 30px
-    height 30px
-    fill gray-6
+    width 15px
+    height 15px
+    stroke gray-2
+    stroke-width 3px
+    fill white
+    margin-bottom 6px
+  span
+    font-weight 500
+    font-size 10px
+    line-height 120%
+    text-transform uppercase
+    color gray-2
 
 .card-views__display
   position relative
@@ -71,7 +70,7 @@
     right 0
 
 .card-views__display-slider
-  max-width 510px
+  max-width 390px
   border-radius 10px
   overflow hidden
   .slick-dots
