catalog and card

--- a/dev/pug/modules/multiselect-field.pug
+++ b/dev/pug/modules/multiselect-field.pug
@@ -4,15 +4,15 @@
   button.select-field__reset.range-field__reset(type="button") сброс
   span.select-field__active Размер одежды
   .select-field__list
-    label.select-field__item XXS
+    label.select-field__item.checkbox-label XXS
       input(type="checkbox")
-    label.select-field__item XS
+    label.select-field__item.checkbox-label XS
       input(type="checkbox")
-    label.select-field__item S
+    label.select-field__item.checkbox-label S
       input(type="checkbox")
-    label.select-field__item M
+    label.select-field__item.checkbox-label M
       input(type="checkbox")
-    label.select-field__item L
+    label.select-field__item.checkbox-label L
       input(type="checkbox")
-    label.select-field__item XL
+    label.select-field__item.checkbox-label XL
       input(type="checkbox")
