--- a/dev/pug/modules/range-field.pug
+++ b/dev/pug/modules/range-field.pug
@@ -1,4 +1,6 @@
 .select-field(data-range="true" data-placeholder="Возраст")
+  button.select-field__close(type="button" aria-label="Очистить селект")
+    +icon('close')
   button.range-field__reset.mobile(type="button") сброс
   span.select-field__active Возраст
   .range-field.select-field__list
