--- a/dev/static/stylus/base/vars.styl
+++ b/dev/static/stylus/base/vars.styl
@@ -10,8 +10,11 @@ color-red = #EB5757
 // РАЗМЕРЫ
 
 breakpoint-xl = 1400px
+breakpoint-llg = 1200px
 breakpoint-lg = 1024px
 breakpoint-md = 768px
+breakpoint-sm = 480px
+breakpoint-ssm = 320px
 
 // ШРИФТЫ
 
