--- a/dev/static/stylus/common/common.styl
+++ b/dev/static/stylus/common/common.styl
@@ -11,3 +11,8 @@
 @import 'select-field.styl'
 @import 'range-field.styl'
 @import 'multiselect-field.styl'
+@import 'page-title.styl'
+@import 'form-group.styl'
+@import 'checkbox-label.styl'
+@import 'form-select.styl'
+@import 'form.styl'
