--- a/dev/static/stylus/common/range-field.styl
+++ b/dev/static/stylus/common/range-field.styl
@@ -53,16 +53,8 @@
     letter-spacing 1.5px
     text-transform uppercase
     padding 10px
-    &:before
-      content ''
-      display block
-      width 160px
-      height 30px
-      background-color gray-6
-      position absolute
-      top 0
-      right 0
-      z-index -1
+  @media (max-width breakpoint-ssm)
+    right 10px
 
 .range-field__slider-info
   display flex
