--- a/dev/static/stylus/common/select-field.styl
+++ b/dev/static/stylus/common/select-field.styl
@@ -41,6 +41,7 @@
   display none
   padding 5px
   cursor pointer
+  background-color transparent
   svg
     width 12px
     height 12px
@@ -95,7 +96,7 @@
     width 100%
     max-width 87%
     transform none
-    min-width 320px
+    min-width 278px
     max-height 100%
     padding 0 0 0 16px
 
