--- a/dev/static/stylus/main.styl
+++ b/dev/static/stylus/main.styl
@@ -30,6 +30,20 @@
 @import 'section/error.styl'
 /* Стили страницы error */
 
+/* Стили страницы thanks */
+@import 'section/thanks.styl'
+/* Стили страницы thanks */
+
+/* Стили страницы become */
+@import 'section/become/index.styl'
+/* Стили страницы become */
+
+/* Стили страницы payment */
+@import 'section/payment/index.styl'
+/* Стили страницы payment */
+
+
+
 /* Стили modal card */
 @import 'section/card/index.styl'
 /* Стили modal card */
