--- a/dev/static/stylus/section/catalog/filters.styl
+++ b/dev/static/stylus/section/catalog/filters.styl
@@ -125,7 +125,8 @@
 
 .catalog-filters__result
   display none
+  margin 12px auto
+  width calc(100% - 25px)
+  flex none
   @media (max-width breakpoint-md)
     display flex
-    margin 12px auto
-    width calc(100% - 25px)
