--- a/dev/pug/pages/become.pug
+++ b/dev/pug/pages/become.pug
@@ -5,6 +5,6 @@ block variables
 
 block content
 	.become-page
-		.container
-			h1(style="margin-bottom: 1em;") Страница находится в разработке
-			a(href="catalog.html") Каталог
+		include ../section/become/hero
+		include ../section/become/info
+		include ../section/become/form
