--- a/dev/pug/pages/index.pug
+++ b/dev/pug/pages/index.pug
@@ -1,10 +1,12 @@
 extends ../layout/main
 
 block variables
-	- var title = 'Каталог'
+	- var title = 'Главная'
 
 block content
 	.index-page
 		.container
 			h1(style="margin-bottom: 1em;") Страница находится в разработке
 			a(href="catalog.html") Каталог
+			a(href="become.html") Стать моделью
+			a(href="thanks.html") Страница благодарности после оплаты
