--- a/dev/pug/section/card/views.pug
+++ b/dev/pug/section/card/views.pug
@@ -15,6 +15,7 @@
       +icon('play')
       span Видео
   .card-views__display
+    span.card-views__display-text агентство: kestudio
     button.card-views__display-arrow.prev(type="button" aria-label="Предыдущее фото")
       +icon('arrow-left')
     button.card-views__display-arrow.next(type="button" aria-label="Следующее фото")
@@ -30,3 +31,5 @@
         img(src="app/img/content/card.jpg" alt="Просмотр ИМЯ 4")
       .card-views__display-slide
         img(src="app/img/content/card.jpg" alt="Просмотр ИМЯ 5")
+    .card-views__display-video
+      video(src="app/img/content/videoplayback.mp4" controls)
