--- a/dev/static/stylus/section/card/views.styl
+++ b/dev/static/stylus/section/card/views.styl
@@ -5,18 +5,53 @@
   display flex
   align-self flex-start
   flex none
+  @media (max-width breakpoint-llg)
+    max-width 470px
+  @media (max-width breakpoint-lg)
+    max-width 380px
+  @media (max-width breakpoint-md)
+    max-width 100%
+    flex-direction column-reverse
 
 .card-views__thumbs
   width 60px
   margin-right 50px
+  @media (max-width breakpoint-llg)
+    margin-right 20px
+  @media (max-width breakpoint-md)
+    margin-right 0
+    width 100%
+    position relative
+    z-index 2
 
 .card-views__thumbs-slider
   height 380px
+  @media (max-width breakpoint-md)
+    position absolute
+    bottom calc(100% + 30px)
+    left 50%
+    transform translateX(-50%)
+    height auto
+    max-width 75px
+    overflow hidden
 
 .card-views__thumbs-slide
   cursor pointer
   &+&
     margin-top 20px
+  @media (max-width breakpoint-md)
+    width 6px
+    height 6px
+    border-radius 50%
+    background-color #fff
+    cursor pointer
+    &.slick-current
+      background-color gray-2
+    img
+      display none
+    &+&
+      margin-top 0
+      margin-left 14px
 
 .card-views__thumbs-video
   position relative
@@ -31,6 +66,7 @@
   overflow hidden
   cursor pointer
   margin-top 20px
+  background-color transparent
   svg
     width 15px
     height 15px
@@ -44,9 +80,38 @@
     line-height 120%
     text-transform uppercase
     color gray-2
+  @media (max-width breakpoint-md)
+    background-color gray-5
+    flex-direction row
+    width 100%
+    height 60px
+    margin-top 0
+    svg
+      margin-bottom 0
+      margin-right 10px
+      fill gray-5
 
 .card-views__display
   position relative
+  align-self flex-start
+  @media (max-width breakpoint-md)
+    max-width 100%
+
+.card-views__display-text
+  position absolute
+  bottom 18px
+  left 20px
+  color rgba(gray-2, .2)
+  font-weight 500
+  font-size 10px
+  letter-spacing 1.5px
+  text-transform uppercase
+  z-index 2
+  @media (max-width breakpoint-md)
+    bottom 36px
+    left 22px
+    transform rotate(-90deg)
+    transform-origin left bottom
 
 .card-views__display-arrow
   position absolute
@@ -90,3 +155,33 @@
         background-color gray-2
     li + li
       margin-left 14px
+  @media (max-width breakpoint-lg)
+    max-width 300px
+  @media (max-width breakpoint-md)
+    max-width 100%
+    border-radius 0
+
+.card-views__display-slide
+  @media (max-width breakpoint-md)
+    img
+      display block
+      margin 0 auto
+
+.card-views__display-video
+  position absolute
+  top 0
+  left 0
+  right 0
+  bottom 0
+  background-color #fff
+  z-index 100
+  display flex
+  align-items center
+  opacity 0
+  visibility hidden
+  overflow hidden
+  video
+    width 100%
+  &.active
+    opacity 1
+    visibility visible
