--- a/dev/static/stylus/common/buttons.styl
+++ b/dev/static/stylus/common/buttons.styl
@@ -12,6 +12,7 @@
   border-radius 10px
   transition all .2s
   background-color transparent
+  min-width 300px
   &.active,
   &:hover
     border-color gray-2
@@ -28,4 +29,3 @@
     font-size 14px
     line-height 14px
     padding 19px 0
-    width 100%
