change init modal

--- a/dev/pug/section/catalog/block.pug
+++ b/dev/pug/section/catalog/block.pug
@@ -1,4 +1,4 @@
-.catalog-list-block(data-remodal-target="name_slug")
+.catalog-list-block(data-name="name_slug")
   .catalog-list-block__image
     img(src="app/img/content/catalog-list.jpg" alt="имя")
   .catalog-list-block__row
