add payment thanks and 404

--- a/dev/pug/pages/index.pug
+++ b/dev/pug/pages/index.pug
@@ -7,4 +7,11 @@ block content
 	.index-page
 		.container
 			h1(style="margin-bottom: 1em;") Страница находится в разработке
-			a(href="catalog.html") Каталог
+			p
+				a(href="catalog.html") Каталог
+			p
+				a(href="payment.html") Оплата
+			p
+				a(href="thanks.html") Благодарность за оплату
+			p
+				a(href="404.html") 404 страница
