--- a/dev/static/stylus/section/payment/organization.styl
+++ b/dev/static/stylus/section/payment/organization.styl
@@ -1,9 +1,13 @@
 .payment-organization
   max-width 600px
   margin 0 auto
+  @media (max-width breakpoint-md)
+    padding 0 16px
 
 .payment-organization__title
   margin-bottom 100px
+  @media (max-width breakpoint-md)
+    margin-bottom 50px
 
 .payment-organization__summ
   margin-top 40px
