--- a/dev/static/stylus/common/checkbox-label.styl
+++ b/dev/static/stylus/common/checkbox-label.styl
@@ -23,3 +23,5 @@
     background-size contain
     background-image url("data:image/svg+xml,%3Csvg width='15' height='12' viewBox='0 0 15 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4.76691 9.46756L1.21092 5.73602L0 6.99776L4.76691 12L15 1.26174L13.7976 0L4.76691 9.46756Z' fill='%232A2C36'/%3E%3C/svg%3E%0A")
     opacity 0
+  @media (max-width breakpoint-md)
+    padding-left 40px
