update kpp placeholder and js valid

--- a/dev/pug/section/payment/organization.pug
+++ b/dev/pug/section/payment/organization.pug
@@ -15,7 +15,7 @@ form.payment-organization.form(data-validation)
       input.form-group__input(type="text" data-name="text" id="org-name" placeholder="Наименование компании")
     .form-group
       label.form-group__label(for="org-kpp") КПП
-      input.form-group__input(type="num" data-name="num" id="org-kpp" placeholder="КПП")
+      input.form-group__input(type="num" id="org-kpp" placeholder="Только для ООО")
     .form-group
       label.form-group__label(for="org-ogrn") ОГРН
       input.form-group__input(type="num" data-name="num" id="org-ogrn" placeholder="ОГРН")
