add summ suffix

--- a/dev/pug/section/payment/organization.pug
+++ b/dev/pug/section/payment/organization.pug
@@ -34,6 +34,6 @@ form.payment-organization.form(data-validation)
       input.form-group__input(type="text" data-name="email" id="org-inn" placeholder="E-Mail")
     .form-group.payment-organization__summ
       label.form-group__label(for="org-summ") Сумма 
-      input.form-group__input(type="num" data-name="num" id="org-summ" placeholder="Введите сумму за услуги")
+      input.form-group__input(type="num" data-name="text" data-summ id="org-summ" placeholder="Введите сумму за услуги")
   button.btn.btn--dark.payment-organization__btn(type="submit")
     span check out
