--- a/dev/pug/section/payment/human.pug
+++ b/dev/pug/section/payment/human.pug
@@ -2,6 +2,6 @@ form.payment-human.form(data-validation)
   .form__block
     h5.form__subtitle.payment-human__title Введите сумму
     .form-group
-      input.form-group__input(type="num" data-name="num" placeholder="Введите сумму за услуги")
+      input.form-group__input(type="num" data-name="text" placeholder="Введите сумму за услуги" data-summ)
   button.btn.btn--dark.payment-human__btn(type="submit")
     span check out
