--- a/dev/pug/pages/index.pug
+++ b/dev/pug/pages/index.pug
@@ -15,3 +15,5 @@ block content
 				a(href="thanks.html") Благодарность за оплату
 			p
 				a(href="404.html") 404 страница
+			p
+				a(href="become.html") Стать моделью
