fixed become and add scroll to element

--- a/dev/pug/section/become/form.pug
+++ b/dev/pug/section/become/form.pug
@@ -13,7 +13,7 @@ section.become-form
             input.form-group__input(type="text" placeholder="Фамилия" id="lastname" data-name="text")
           .form-group
             label.form-group__label(for="datepicker") Дата рождения
-            input.form-group__input(data-toggle="datepicker" placeholder="Дата рождения" id="datepicker" data-name="text")
+            input.form-group__input(data-toggle="datepicker" placeholder="Дата рождения" id="datepicker" data-name="text" data-date)
         .form__block
           h5.form__subtitle.become-form__subtitle--params Основные параметры внешности 
           .form-group
