--- a/dev/pug/section/payment/human.pug
+++ b/dev/pug/section/payment/human.pug
@@ -4,4 +4,4 @@ form.payment-human.form(data-validation)
     .form-group
       input.form-group__input(type="num" data-name="text" placeholder="Введите сумму за услуги" data-summ)
   button.btn.btn--dark.payment-human__btn(type="submit")
-    span check out
+    span Оплатить
