--- a/dev/static/stylus/section/become/hero.styl
+++ b/dev/static/stylus/section/become/hero.styl
@@ -36,8 +36,9 @@
   color #fff
   margin-bottom 60px
   @media (max-width breakpoint-md)
-    margin-bottom 40px
-    font-size 18px
+    margin-bottom 130px
+    font-size 20px
+    max-width 70%
 
 .become-hero__btn
   max-width 330px
