--- a/dev/pug/section/become/hero.pug
+++ b/dev/pug/section/become/hero.pug
@@ -3,4 +3,4 @@ section.become-hero(style="background-image: url('app/img/content/become.jpg')")
     .become-hero__wrap
       h1.page-title.page-title--white.become-hero__title Стань лицом бренда
       p.become-hero__text Модели KazanExpress участвуют в съемках товаров для будущих крупных российских и международных брендов
-      button.become-hero__btn.btn.btn--white(type="buttton") Заполнить анкету
+      button.become-hero__btn.btn.btn--white.js-scroll-to(type="buttton" href="#become-info") Заполнить анкету
