--- a/dev/pug/section/payment/organization.pug
+++ b/dev/pug/section/payment/organization.pug
@@ -36,4 +36,4 @@ form.payment-organization.form(data-validation)
       label.form-group__label(for="org-summ") Сумма 
       input.form-group__input(type="num" data-name="text" data-summ id="org-summ" placeholder="Введите сумму за услуги")
   button.btn.btn--dark.payment-organization__btn(type="submit")
-    span check out
+    span Оплатить
