--- a/dev/static/stylus/base/fonts.styl
+++ b/dev/static/stylus/base/fonts.styl
@@ -1,20 +1,24 @@
 @font-face
   font-family 'Roboto'
-  src url('../fonts/Roboto-Regular.eot')
-  src url('../fonts/Roboto-Regular.eot?#iefix') format('embedded-opentype')
-      url('../fonts/Roboto-Regular.woff') format('woff')
-      url('../fonts/Roboto-Regular.ttf') format('truetype')
+  src url('../fonts/Roboto-Regular.woff2') format('woff2'),
+      url('../fonts/Roboto-Regular.woff') format('woff');
   font-weight normal
   font-style normal
   font-display swap
 
 @font-face
   font-family 'Roboto'
-  src url('../fonts/Roboto-Medium.eot')
-  src url('../fonts/Roboto-Medium.eot?#iefix') format('embedded-opentype')
-      url('../fonts/Roboto-Medium.woff') format('woff')
-      url('../fonts/Roboto-Medium.ttf') format('truetype')
+  src url('../fonts/Roboto-Medium.woff2') format('woff2'),
+      url('../fonts/Roboto-Medium.woff') format('woff');
   font-weight 500
+  font-style normal
+  font-display swap
+
+@font-face
+  font-family 'Roboto'
+  src url('../fonts/Roboto-Bold.woff2') format('woff2'),
+      url('../fonts/Roboto-Bold.woff') format('woff');
+  font-weight bold
   font-style normal
   font-display swap
 
