--- a/dev/static/stylus/section/become/index.styl
+++ b/dev/static/stylus/section/become/index.styl
@@ -2,7 +2,8 @@
   padding-bottom 105px
   background-color gray-6
   @media (max-width breakpoint-md)
-    padding-bottom 35px
+    padding-bottom 40px
+    background-color #fff
 
 @import './hero.styl'
 @import './info.styl'
