update font name for input summ

--- a/dev/static/stylus/common/form-group.styl
+++ b/dev/static/stylus/common/form-group.styl
@@ -34,6 +34,8 @@
     color gray-5
   &:focus
     border-color gray-1
+  &[data-summ]
+    font-family -apple-system, 'Roboto', Arial, sans-serif
 
 .form-group__checkbox
   display none
