add contact modal and scroll menu

--- a/dev/pug/modules/menu.pug
+++ b/dev/pug/modules/menu.pug
@@ -1,13 +1,7 @@
 nav.menu
-  //- scroll in index to section
-  a.menu__link(href="#") О студии
-  //- scroll in index to section
-  a.menu__link(href="#") Услуги
-  //- link
+  a.menu__link.js-scroll-to(href="#about") О студии
+  a.menu__link.js-scroll-to(href="#services") Услуги
   a.menu__link.active(href="catalog.html") Модели
-  //- link
   a.menu__link(href="become.html") Стать моделью
-  //- link
   a.menu__link(href="payment.html") Оплата
-  //- open popup
-  a.menu__link(href="#") Контакты
+  button.menu__link(type="button" data-remodal-target="contact-modal") Контакты
