--- a/dev/pug/pages/index.pug
+++ b/dev/pug/pages/index.pug
@@ -6,14 +6,17 @@ block variables
 block content
 	.index-page
 		.container
-			h1(style="margin-bottom: 1em;") Страница находится в разработке
-			p
+			h1.page-title(style="margin-bottom: 1em;") Страница находится в разработке
+			p(style="margin-bottom: 1em;")
 				a(href="catalog.html") Каталог
-			p
+			p(style="margin-bottom: 1em;")
 				a(href="payment.html") Оплата
-			p
+			p(style="margin-bottom: 1em;")
 				a(href="thanks.html") Благодарность за оплату
-			p
+			p(style="margin-bottom: 1em;")
 				a(href="404.html") 404 страница
-			p
+			p(style="margin-bottom: 1em;")
 				a(href="become.html") Стать моделью
+			section#hero(style="height: 100vh;") section hero
+			section#about(style="height: 100vh;") section about
+			section#services(style="height: 100vh;") section services
