--- a/dev/static/stylus/common/common.styl
+++ b/dev/static/stylus/common/common.styl
@@ -16,3 +16,5 @@
 @import 'checkbox-label.styl'
 @import 'form-select.styl'
 @import 'form.styl'
+@import 'contact-modal.styl'
+@import 'modal-close.styl'
