--- a/dev/static/stylus/common/menu.styl
+++ b/dev/static/stylus/common/menu.styl
@@ -14,6 +14,8 @@
   letter-spacing 0.01em
   color gray-1
   padding 20px
+  cursor pointer
+  background-color transparent
   &:hover,
   &.active
     text-decoration underline
@@ -29,6 +31,7 @@
     height 56px
     background-color gray-1
     color #fff
+    width 100%
     &:hover,
     &.active
       text-decoration none
