--- a/dev/pug/section/become/form.pug
+++ b/dev/pug/section/become/form.pug
@@ -1,4 +1,4 @@
-section.become-form
+section.become-form#become-form
   .container
     .become-form__wrap
       h4.become-form__title Чтобы стать моделью Kazanexpress, пожалуйста заполните данные анкеты
