--- a/dev/pug/section/become/info.pug
+++ b/dev/pug/section/become/info.pug
@@ -1,4 +1,4 @@
-section.become-info#become-info
+section.become-info
   .container
     h3.title-h3.become-info__title Сотрудничество с нами - это возможность стать лицом международной компании. 
     .become-info__wrap
