--- a/dev/static/stylus/common/page-title.styl
+++ b/dev/static/stylus/common/page-title.styl
@@ -3,7 +3,7 @@
   font-size 48px
   line-height 120%
   letter-spacing 1px
-  color gray-2
+  color gray-1
   &--white
     color #fff
   @media (max-width breakpoint-md)
@@ -14,4 +14,6 @@
   font-size 36px
   line-height 120%
   letter-spacing 1px
-  color gray-2
+  color gray-1
+  &--white
+    color #fff
