--- a/dev/static/stylus/main.styl
+++ b/dev/static/stylus/main.styl
@@ -42,7 +42,9 @@
 @import 'section/payment/index.styl'
 /* Стили страницы payment */
 
-
+/* Стили страницы index */
+@import 'section/index/index.styl'
+/* Стили страницы index */
 
 /* Стили modal card */
 @import 'section/card/index.styl'
